# RescueBox

./: .gitignore  Dockerfile  GEMINI.md  README.md  README_EXE.txt  README_docker.md  README_plugin.md  google.gemini.customInstructionsFile  make_rb.sh  o1.json  pre-req.sh  pyproject.toml  rescuebox.spec  sdk_config.yaml  setup_rescuebox.sh  win_make.bat
sdk2/: README.md  README.txt  README_PIPELINE_DEMO.txt  broker.db  celerydb.db  main.py  myapp.py  persist.py  pyproject.toml  rb_celery.py  rb_client.py  rb_pipeline.py  save_text.txt
sdk2/rescue_box_api_client/: __init__.py
sdk2/rescue_box_api_client/api/age_gender/: rb_age_gender_api_app_metadata_get.py  rb_age_gender_api_routes_get.py  rb_age_gender_predict_post.py  rb_age_gender_predict_task_schema_get.py
sdk2/rescue_box_api_client/api/audio/: rb_audio_api_app_metadata_get.py  rb_audio_api_routes_get.py  rb_audio_transcribe_post.py  rb_audio_transcribe_task_schema_get.py
sdk2/rescue_box_api_client/api/default/: interface_get.py  liveness_get.py
sdk2/rescue_box_api_client/api/docs/: ask_post.py  open_post.py
sdk2/rescue_box_api_client/api/fs/: head_post.py  ls_post.py  op_post.py
sdk2/rescue_box_api_client/api/manage/: info_post.py  list_plugins_post.py
sdk2/rescue_box_api_client/api/text_summarization/: rb_text_summarization_api_app_metadata_get.py  rb_text_summarization_api_routes_get.py  rb_text_summarization_summarize_post.py  rb_text_summarization_summarize_task_schema_get.py
sdk2/rescue_box_api_client/models/: __init__.py  audio_directory.py  audio_input.py  batch_directory_response.py  batch_file_response.py  batch_text_response.py  body_age_gender_predict_post.py  body_audio_transcribe_post.py  body_text_summarization_summarize_post.py  directory_input.py  directory_response.py  file_response.py  file_type.py  http_validation_error.py  inputs.py  inputs_2.py  markdown_response.py  parameters.py  text_response.py  validation_error.py
src/Audio-Diarization-Transcription/: pyproject.toml
src/Audio-Diarization-Transcription/Audio_Diarization/: README.md  app-info.md  app.py  diarize.py  evaluation.py  model.py  model_3endpoints.py  requirements.txt  transcribe.py  transcribe_diarize_app.py  utils.py
src/Audio-Diarization-Transcription/Audio_Diarization/LICENSES/: LICENSE_pathlib  LICENSE_typing
src/Audio-Diarization-Transcription/Audio_Diarization/evaluations/: README.md  ReadMe.md  convert_csv_rttm.py  evaluation.py  file_names.py  flac_to_wav.py  select_wavs.py
src/Audio-Diarization-Transcription/Audio_Diarization/models/: pyannote_diarization_config.yaml
src/Audio-Diarization-Transcription/Audio_Diarization/output/: diarize_and_transcribe_output.csv  diarize_output.csv  diarize_output.json  diarize_transcribe_output.json  output.json  transcribe_output.csv  transcribe_output.json
src/Audio-Diarization-Transcription/tests/: test_model_3endpoints.py
src/FaceDetectionandRecognition/: README.md  detection_testing.py  pyproject.toml  requirements.txt  retinaface_test.py  test_ensemble_voting.py
src/FaceDetectionandRecognition/.github/workflows/: ruff_unittest.yml
src/FaceDetectionandRecognition/benchmark_testing/: benchmark.sh  calc_data_metrics_benchmark.py  construct_paths.py  run_face_find_bulk_benchmark.py  test_data_metrics_benchmark.py
src/FaceDetectionandRecognition/facematch/Sample_Client/: sample_bulk_upload_client.py  sample_delete_collection_client.py  sample_find_face_bulk_client.py  sample_find_face_bulk_testing_client.py  sample_find_face_client.py
src/FaceDetectionandRecognition/facematch/facematch/: database_functions.py  face_match_server.py  face_match_server_multiprocessing.py  face_match_server_multithread.py  face_match_server_multithread_dynamic_worker.py  face_representation.py  interface.py
src/FaceDetectionandRecognition/src/Sample_Client/: sample_find_face_bulk_client.py
src/FaceDetectionandRecognition/src/facematch/: face_match_server.py  face_representation.py
src/FaceDetectionandRecognition/test/: test_DBCreationAndUpload.py  test_app_main.py  test_bulk_upload.py  test_face_match_app.py  test_face_representation.py  test_find_face.py
src/age_gender_classifier/: README.md  pyproject.toml
src/age_gender_classifier/age_gender_classifier/eval/: analyze_labeled_data_raw.py  (+4 more)
src/age_gender_classifier/tests/: test_age_classifier.py
src/deepfake-detection/: README.md  pyproject.toml
src/deepfake-detection/deepfake_detection/: cli.py  img-app-info.md  main.py  results.csv  server.py  sim_data.py
src/deepfake-detection/tests/: test_server.py
src/face-detection-recognition/: README.md  pyproject.toml
src/face-detection-recognition/benchmark_testing/: README.md  benchmark.sh
src/face-detection-recognition/face_detection_recognition/: database_functions.py  face_match_server.py  face_match_server_multiprocessing.py  face_match_server_multithread.py  face_match_server_multithread_dynamic_worker.py  face_representation.py  interface.py
src/face-detection-recognition/test/: test_app_main.py  test_face_match_app.py
src/pipelines-plugin/: pyproject.toml
src/pipelines-plugin/pipelines_plugin/: main.py  main2.py  pipeline_loader.py  pipelines.yaml
src/rb-deepfake-app/: pyproject.toml
src/rb-deepfake-app/rb_deepfake_app/: app_info.md  main.py  video_evaluator.py
src/rb-demo-app/: pyproject.toml
src/rb-demo-app/rb_demo_app/: main.py
src/rb-facematch/: pyproject.toml
src/rb-facematch/rb_facematch/: main.py
src/rescue-box-api-client/: pyproject.toml
src/rescue-box-api-client/rescue_box_api_client/: __init__.py
src/rescuebox-pipeline/: README.md  demo.sh  pyproject.toml  worker.sh
src/rescuebox-pipeline/hello_world/: myapp.py  simple.py  task.py
src/rescuebox-pipeline/pipeline_output/: audio_summary.txt
src/rescuebox-pipeline/rescuebox_pipeline/: README.md  rabbitmq_setup.sh  rb_celery.py  rb_pipe.py  rb_pipeline.py  rb_pipeline2.py  rb_pipeline3.py  sdk_config.yaml
src/ufdr_mounter/: pyproject.toml
src/ufdr_mounter/tests/: test_main_ufdr_mounter.py
src/ufdr_mounter/ufdr_mounter/: README.md  ufdr-app-info.md  ufdr_server.py
(+239 files in other folders)
