[tool.poetry]
name = "rescuebox"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [{include = "rescuebox"}]



[tool.poetry.dependencies]
requests = "^2.32.3"
python = ">=3.11,<=3.13"
pyyaml = "^6.0.2"
typer = "^0.12.5"

rb-api = { path = "src/rb-api", develop = true }

rb-lib = { path = "src/rb-lib", develop = true }

rb-file-utils = { path = "src/rb-file-utils", develop = true }
rb-doc-parser = { path = "src/rb-doc-parser", develop = true }

rb-demo-app = { path = "src/rb-demo-app", develop = true }
rb-deepfake-app = { path = "src/rb-deepfake-app", develop = true }

# Don't add new packages here, add them appropriately in the list above
dlib = "^19.24.6"
tqdm = "^4.67.1"
pillow = "^11.0.0"
torch = "2.5.1"
#torch = "2.0.0"
#torchvision = "0.15.1"
numpy = "^1.24"
torchvision = "^0.20.1"
flask-ml = "^0.2.5"
pretrainedmodels = "^0.7.4"
opencv-python = "^4.10.0.84"
#numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
ruff = "^0.7.1"
pre-commit = "^4.0.1"

[tool.poetry.group.api.dependencies]
rb-api = { path = "src/rb-api", develop = true }

[tool.poetry.group.bundling.dependencies]
pyinstaller = ">5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "rescuebox.pyinstaller:install"
rescuebox = "rescuebox.main:app"
