[project]
name = "deepfake-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "lous-e",email = "mehtaomr@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "*"
pandas = "*"
pillow = "*"
onnxruntime = "*"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
