[tool.poetry]
name = "rb-facematch"
version = "0.1.0"
description = ""
authors = ["Rescue Lab <sahilsharma@umass.edu>"]
packages = [{include = "rb_facematch"}]

[tool.poetry.scripts]
rb_facematch = "rb_facematch.main:app"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
deepface = "*"
# numpy >2.1 does not work
#numpy = "2.0.2"
#tensorflow = "*" does not work
#tensorflow-intel = "2.18.0"
tensorflow-intel = "*"
black = "*"
isort = "*"
tf-keras = "*"
jax = "*"
ultralytics = "*"
pandas = "*"
# 1.2.2 does not work
scikit-learn = "*"
ruff = "*"
cx-freeze = "*"
faiss-cpu = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
