[tool.poetry]
name = "rescuebox-pipeline"
version = "0.1.0"
description = "A plugin runner."
authors = ["RescueBox Team"]
packages = [{include = "rescuebox_pipeline,hello_world"}]

[tool.poetry.scripts]
rescuebox-pipeline = "rescuebox_pipeline.rb_pipeline"


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rescuebox = {path = "../..", develop = true}