[tool.poetry]
name = "rescuebox-pipeline"
version = "0.1.0"
description = "A plugin runner."
authors = ["RescueBox Team"]
packages = [{include = "rescuebox_pipeline"}]

[tool.poetry.scripts]
rescuebox-pipeline = "rescuebox_pipeline.rb_pipeline"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
rescuebox = {path = "../..", develop = true}
